[gd_scene load_steps=16 format=3 uid="uid://v82u568k057g"]

[ext_resource type="Texture2D" uid="uid://bko4sjv7vutic" path="res://sprites/characters/guy.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://1okpyut2pmks" path="res://scripts/player.gd" id="1_qhqgy"]
[ext_resource type="Script" uid="uid://bbycby472n11p" path="res://scripts/player_state_machine.gd" id="2_dqkch"]
[ext_resource type="Script" uid="uid://bqpux5gnjl7bb" path="res://scripts/idle.gd" id="3_dqkch"]
[ext_resource type="Script" uid="uid://47p0oooocw0k" path="res://scenes/walk_state.gd" id="5_tuyoq"]
[ext_resource type="Script" uid="uid://bbxj5gint4bxw" path="res://scenes/fall_state.gd" id="6_fjrip"]
[ext_resource type="Script" uid="uid://dk0yh76p4j2q1" path="res://scripts/hurt_state.gd" id="7_smehm"]
[ext_resource type="Script" uid="uid://diud3uqyfvi0n" path="res://scenes/rewind_state.gd" id="8_ur7pv"]
[ext_resource type="Script" uid="uid://1e7lrikp3ea" path="res://scenes/crouch_state.gd" id="8_y4r1p"]
[ext_resource type="Script" uid="uid://d3livhaf1lpbt" path="res://scenes/box_state.gd" id="9_d2wvv"]

[sub_resource type="Animation" id="Animation_d2wvv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_y4r1p"]
resource_name = "box"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3v2ag"]
_data = {
&"RESET": SubResource("Animation_d2wvv"),
&"box": SubResource("Animation_y4r1p")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g2els"]
radius = 6.0
height = 38.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y4r1p"]
size = Vector2(24, 18)

[node name="player" type="CharacterBody2D" node_paths=PackedStringArray("current_state", "hurt_state", "rewind_state")]
script = ExtResource("1_qhqgy")
current_state = NodePath("player_state_machine/idle")
hurt_state = NodePath("player_state_machine/hurt_state")
rewind_state = NodePath("player_state_machine/rewind_state")

[node name="player_state_machine" type="Node" parent="."]
script = ExtResource("2_dqkch")

[node name="idle" type="Node" parent="player_state_machine" node_paths=PackedStringArray("walk_state", "fall_state", "crouch_state")]
script = ExtResource("3_dqkch")
walk_state = NodePath("../walk_state")
fall_state = NodePath("../fall_state")
crouch_state = NodePath("../crouch state")

[node name="walk_state" type="Node" parent="player_state_machine" node_paths=PackedStringArray("idle_state", "fall_state", "crouch_state")]
script = ExtResource("5_tuyoq")
idle_state = NodePath("../idle")
fall_state = NodePath("../fall_state")
crouch_state = NodePath("../crouch state")

[node name="fall_state" type="Node" parent="player_state_machine" node_paths=PackedStringArray("walk_state")]
script = ExtResource("6_fjrip")
walk_state = NodePath("../walk_state")

[node name="hurt_state" type="Node" parent="player_state_machine" node_paths=PackedStringArray("rewind_state")]
script = ExtResource("7_smehm")
rewind_state = NodePath("../rewind_state")

[node name="rewind_state" type="Node" parent="player_state_machine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("8_ur7pv")
idle_state = NodePath("../idle")

[node name="crouch state" type="Node" parent="player_state_machine" node_paths=PackedStringArray("idle_state", "box_state")]
script = ExtResource("8_y4r1p")
idle_state = NodePath("../idle")
box_state = NodePath("../box_state")
decel_factor = 2

[node name="box_state" type="Node" parent="player_state_machine" node_paths=PackedStringArray("crouch_state", "jump_state")]
script = ExtResource("9_d2wvv")
crouch_state = NodePath("../crouch state")
jump_state = NodePath("../fall_state")

[node name="player_sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_3vyb7")
flip_h = true
hframes = 2

[node name="player_animator" type="AnimationPlayer" parent="player_sprite"]
libraries = {
&"": SubResource("AnimationLibrary_3v2ag")
}

[node name="player_collision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_g2els")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="box_collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_y4r1p")
disabled = true
